@@ -3,8 +3,8 @@
 Summary:  A python library for manipulating kickstart files
 Name: pykickstart
 Url: http://fedoraproject.org/wiki/pykickstart
-Version: 1.2
-Release: 2%{?dist}
+Version: 1.3
+Release: 1%{?dist}
 # This is a Red Hat maintained package which is specific to
 # our distribution.  Thus the source is only available from
 # within this srpm.
@@ -42,6 +42,10 @@ rm -rf %{buildroot}
 %{_bindir}/ksvalidator
 
 %changelog
+* Wed Jul 11 2007 Chris Lumens <clumens@redhat.com> - 1.3-1
+- Add support for ignoredisk --only-use.
+- Fix traceback in raid command printing method (#246709).
+
 * Fri Jun 08 2007 Chris Lumens <clumens@redhat.com> - 1.2-2
 - Fix package review problems (#226334).
 
