@@ -373,7 +373,7 @@ commandMap = {
         "logvol": logvol.FC3_LogVol,
         "monitor": monitor.FC3_Monitor,
         "mouse": mouse.RHEL3_Mouse,
-        "network": network.RHEL4_Network,
+        "network": network.FC3_Network,
         "nfs": method.FC3_Method,
         "part": partition.FC3_Partition,
         "partition": partition.FC3_Partition,
@@ -411,7 +411,7 @@ commandMap = {
         "graphical": displaymode.FC3_DisplayMode,
         "halt": reboot.FC3_Reboot,
         "harddrive": method.FC3_Method,
-        "ignoredisk": ignoredisk.FC3_IgnoreDisk,
+        "ignoredisk": ignoredisk.RHEL4_IgnoreDisk,
         "install": upgrade.FC3_Upgrade,
         "interactive": interactive.FC3_Interactive,
         "keyboard": keyboard.FC3_Keyboard,
