@@ -1,3 +1,11 @@
+2007-07-16  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart.spec, setup.py:  New version.
+
+2007-07-16  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/ignoredisk.py:  RHEL4 supports --only-use too.
+
 2007-07-11  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/ignoredisk.py (F8_IgnoreDisk):  Add support
